--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,4 +1,492 @@
+html {
+  overflow: scroll;
+}
+
 body {
   margin: 0;
   font-family: Helvetica;
+}
+
+.header {
+  position: absolute;
+  width: 100%;
+  background-color: #2d2f30;
+  height: 140px;
+  padding: 0;
+  margin-bottom: 5px;
+  box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
+  z-index: 999;
+  letter-spacing: 1px;
+}
+
+.sticky {
+  width: 100%;
+  position: fixed;
+  background-color: #2d2f30;
+  height: 50px;
+  padding: 0;
+  margin-bottom: 50px;
+  box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
+  z-index: 999;
+  letter-spacing: 1px;
+}
+
+.header-content {
+  height: 90px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  letter-spacing: 1px;
+}
+
+.header-img {
+  width: 200px;
+  margin-bottom: 15px;
+}
+
+.header-title {
+  display: flex;
+  flex-direction: row;
+}
+
+.header-title-text-1 {
+  font-size: 16px;
+  font-weight: 300;
+  margin: 0;
+  color: #2db7f7;
+}
+
+.header-title-text-2 {
+  font-size: 16px;
+  font-weight: 300;
+  margin: 0;
+  color: #8ade1d;
+}
+
+.header-title-angle {
+  font-size: 16px;
+  color: red;
+  margin: 0;
+  margin-left: 2px;
+  margin-right: 2px;
+  font-weight: 400;
+}
+
+.header-title-syntax {
+  font-size: 16px;
+  color: #c4cacf;
+  margin: 0;
+  font-weight: 300;
+}
+
+.nav-bar {
+  padding-left: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 50px;
+}
+
+.nav-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 110px;
+  text-decoration: none;
+  color: #dddce8;
+  border-radius: 3px;
+}
+
+.active {
+  color: #f2c213;
+}
+
+.disabled {
+  display: none;
+}
+
+.nav-item:hover {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 110px;
+  text-decoration: none;
+  color: white;
+  background-color: #403f3d;
+}
+
+.nav-item-text {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.nav-item-bracket {
+  font-size: 20px;
+  color: red;
+  font-weight: 800;
+}
+
+.body {
+  overflow-x: hidden;
+  background-color: #d9dede;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.content {
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin-top: 140px;
+}
+
+.about-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.about-top {
+  display: flex;
+  flex-direction: row;
+}
+
+.about-text {
+  font-size: 16px;
+  font-weight: 300;
+  color: #636262;
+  width: 400px;
+  margin-right: 30px;
+  letter-spacing: 1px;
+}
+
+.about-img {
+  width: 300px;
+  border-radius: 10px;
+  margin-right: 20px;
+  margin-left: 30px;
+}
+
+.thumbnail-container {
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.thumbnail-img {
+  width: 75px;
+  margin-left: 20px;
+}
+
+.animated-slideshow-container {
+  background-color: #e8e6e3;
+  height: 400px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  box-shadow: 0px 3px 11px -4px rgba(0,0,0,0.75);
+}
+
+.animated-heading-container {
+
+}
+
+.animated-heading {
+  color: #636262;
+  letter-spacing: 1px;
+  font-weight: 400;
+}
+
+.img-slideshow {
+  width: 450px;
+}
+
+.cv-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.cv-image-large {
+  height: 850px;
+  width: 650px;
+  box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
+  margin-right: 20px;
+}
+
+.cv-image-small {
+  height: 400px;
+  width: 250px;
+  box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
+}
+
+.expo-title {
+  font-size: 18px;
+  font-weight: 300;
+  margin: 0;
+  color: white;
+}
+
+.links {
+  height: 500px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.link {
+
+}
+
+.github-icon {
+  border-radius: 10px;
+  width: 100px;
+}
+
+.linkedin-icon {
+  width: 180px;
+}
+
+.gmail-icon {
+  margin-right: 20px;
+  width: 160px;
+}
+
+.seperator {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.seperator-line-left {
+  border-bottom: 1px solid #bbb;
+  width: 42%;
+  box-shadow: 0px 2px 0px 0px rgba(186,182,186,1);
+  margin-left: 20px;
+  margin-bottom: 15px;
+}
+
+.seperator-line-right {
+  border-bottom: 1px solid #bbb;
+  width: 42%;
+  box-shadow: 0px 2px 0px 0px rgba(186,182,186,1);
+  margin-right: 20px;
+  margin-bottom: 15px;
+}
+
+.seperator-title {
+  margin: 0;
+  color: #636262;
+}
+
+/* ------------------------------------ Mobile ----------------------------------------------- */
+
+.about-text-mobile {
+  font-size: 12px;
+  font-weight: 300;
+  color: #636262;
+  margin-right: 30px;
+  margin-left: 30px;
+  letter-spacing: 1px;
+  margin-top: 0;
+}
+
+.about-img-mobile {
+  width: 120px;
+  height: 140px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
+  margin-left: 30px;
+  margin-bottom: 20px;
+}
+
+.header-img-mobile {
+  width: 150px;
+  margin-bottom: 15px;
+}
+
+.header-title-mobile {
+  font-size: 14px;
+  font-weight: 300;
+  margin: 0;
+  color: #dddce8;
+}
+
+.nav-item-mobile {
+  font-size: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100px;
+  text-decoration: none;
+  color: #dddce8;
+  border-radius: 3px;
+}
+
+.nav-bar-mobile {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  height: 50px;
+}
+
+.content-mobile {
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fff;
+  box-shadow: 0px 2px 5px 0px rgba(186,182,186,1);
+  width: 100%;
+  margin-top: 140px;
+}
+
+.thumbnail-container-mobile {
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.thumbnail-img-mobile {
+  width: 50px;
+  margin-left: 10px;
+}
+
+.animated-heading-mobile {
+  font-size: 12px;
+  color: #636262;
+  letter-spacing: 1px;
+  font-weight: 400;
+}
+
+.img-slideshow-mobile {
+  width: 250px;
+}
+
+.cv-container-mobile {
+  display: flex;
+  flex-direction: column;
+}
+
+.cv-image-large-mobile {
+  display: none;
+  height: 850px;
+  width: 650px;
+  box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
+  margin-right: 20px;
+}
+
+.cv-image-small-mobile {
+  height: 600px;
+  width: 100%;
+  box-shadow: 0px 0px 5px -4px rgba(0,0,0,0.75);
+}
+
+.expo-title-mobile {
+  font-size: 18px;
+  font-weight: 300;
+  margin: 0;
+  color: #636262;
+}
+
+.expo-text-mobile {
+  font-size: 12px;
+  font-weight: 300;
+  color: #636262;
+  letter-spacing: 1px;
+  margin-right: 30px;
+  margin-left: 30px;
+}
+
+.expo-caption-mobile {
+  font-size: 10px;
+  font-weight: 300;
+  width: 200px;
+  color: #636262;
+  letter-spacing: 1px;
+}
+
+.expo-image-mobile {
+  width: 300px;
+  box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
+  border-radius: 5px;
+}
+
+.links-mobile {
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: stretch;
+  align-items: center;
+}
+
+.link-mobile {
+
+}
+
+.github-icon-mobile {
+  width: 100px;
+  border-radius: 10px;
+}
+
+.linkedin-icon-mobile {
+  width: 180px;
+}
+
+.gmail-icon-mobile {
+  width: 140px;
+}
+
+.seperator-mobile {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.seperator-line-left-mobile {
+  border-bottom: 1px solid #bbb;
+  width: 30%;
+  box-shadow: 0px 2px 0px 0px rgba(186,182,186,1);
+  margin-left: 20px;
+  margin-bottom: 15px;
+}
+
+.seperator-line-right-mobile {
+  border-bottom: 1px solid #bbb;
+  width: 30%;
+  box-shadow: 0px 2px 0px 0px rgba(186,182,186,1);
+  margin-right: 20px;
+  margin-bottom: 15px;
+}
+
+.seperator-title-mobile {
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 5px;
+  margin-top: 0;
+  color: #636262;
+  font-size: 16px;
 }
