--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,10 +1,12 @@
 html {
   overflow: scroll;
+  /* height: 100%; */
 }
 
 body {
   margin: 0;
   font-family: Helvetica;
+  height: 100%;
 }
 
 .header {
@@ -46,26 +48,32 @@ body {
 }
 
 .header-title {
+  font-size: 14px;
   display: flex;
   flex-direction: row;
 }
 
-.header-title-text-1 {
-  font-size: 16px;
+.text-blue {
   font-weight: 300;
   margin: 0;
   color: #2db7f7;
 }
 
-.header-title-text-2 {
-  font-size: 16px;
+.text-green {
   font-weight: 300;
   margin: 0;
-  color: #8ade1d;
+  color: #83db81;
 }
 
-.header-title-angle {
-  font-size: 16px;
+.text-yellow {
+  color: #f2c213;
+}
+
+.text-red {
+  color: #f55d76;
+}
+
+.angle {
   color: red;
   margin: 0;
   margin-left: 2px;
@@ -73,8 +81,7 @@ body {
   font-weight: 400;
 }
 
-.header-title-syntax {
-  font-size: 16px;
+.syntax {
   color: #c4cacf;
   margin: 0;
   font-weight: 300;
@@ -136,6 +143,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  height: 100%;
 }
 
 .content {
@@ -145,6 +153,7 @@ body {
   align-items: center;
   width: 100%;
   margin-top: 140px;
+  height: 100%;
 }
 
 .about-container {
@@ -152,28 +161,70 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   width: 100%;
+  height: calc(100vh - 140px);
+  min-height: 500px;
   margin-bottom: 10px;
 }
 
 .about-top {
   display: flex;
   flex-direction: row;
+  justify-content: flex-start;
+  min-height: 160px;
+  height: 33%;
+  margin-left: 50px;
+  margin-top: 30px;
+}
+
+.about-middle {
+  display: flex;
+  justify-content: flex-end;
+  height: 33%;
+  min-height: 160px;
+  margin-right: 40px;
+}
+
+.about-bottom {
+  display: flex;
+  justify-content: flex-start;
+  height: 33%;
+  min-height: 160px;
+  margin-left: 140px;
 }
 
 .about-text {
-  font-size: 16px;
+  font-family: monospace;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border: 3px solid #fffafb;
+  border-radius: 7px;
+  background-color: #434547;
+  font-size: 14px;
   font-weight: 300;
-  color: #636262;
-  width: 400px;
+  color: #f2f4f7;
+  min-width: 600px;
+  height: 100px;
   margin-right: 30px;
-  letter-spacing: 1px;
+  box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
+}
+
+.about-line {
+  margin-top: 7px;
+  margin-bottom: 7px;
 }
 
 .about-img {
-  width: 300px;
+  width: 150px;
+  height: 150px;
   border-radius: 10px;
   margin-right: 20px;
   margin-left: 30px;
+  box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
 }
 
 .thumbnail-container {
@@ -190,7 +241,8 @@ body {
 
 .animated-slideshow-container {
   background-color: #e8e6e3;
-  height: 400px;
+  height: 350px;
+  min-height: 350px;
   width: 100%;
   display: flex;
   align-items: center;
@@ -200,7 +252,8 @@ body {
 }
 
 .animated-heading-container {
-
+  min-height: 60px;
+  height: 60px;
 }
 
 .animated-heading {
