--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -12,7 +12,7 @@ body {
 .header {
   position: absolute;
   width: 100%;
-  background-color: #2d2f30;
+  background-color: #e8a061;
   height: 140px;
   padding: 0;
   margin-bottom: 5px;
@@ -24,7 +24,7 @@ body {
 .sticky {
   width: 100%;
   position: fixed;
-  background-color: #2d2f30;
+  background-color: #e8a061;
   height: 50px;
   padding: 0;
   margin-bottom: 50px;
@@ -59,10 +59,22 @@ body {
   color: #2db7f7;
 }
 
+.text-dark-blue {
+  font-weight: 500;
+  margin: 0;
+  color: #161d66;
+}
+
 .text-green {
   font-weight: 300;
   margin: 0;
   color: #83db81;
+}
+
+.text-dark-green {
+  font-weight: 500;
+  margin: 0;
+  color: #067508;
 }
 
 .text-yellow {
@@ -102,12 +114,12 @@ body {
   height: 100%;
   width: 110px;
   text-decoration: none;
-  color: #dddce8;
+  color: #434547;
   border-radius: 3px;
 }
 
 .active {
-  color: #f2c213;
+  color: #c23235;
 }
 
 .disabled {
@@ -122,7 +134,7 @@ body {
   width: 110px;
   text-decoration: none;
   color: white;
-  background-color: #403f3d;
+  background-color: #d6735a;
 }
 
 .nav-item-text {
@@ -132,13 +144,13 @@ body {
 
 .nav-item-bracket {
   font-size: 20px;
-  color: red;
+  color: #31323d;
   font-weight: 800;
 }
 
 .body {
   overflow-x: hidden;
-  background-color: #d9dede;
+  background-color: #fffcfd;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -192,7 +204,7 @@ body {
   margin-left: 140px;
 }
 
-.about-text {
+.code-text {
   font-family: monospace;
   padding-left: 20px;
   padding-right: 20px;
@@ -208,9 +220,14 @@ body {
   font-weight: 300;
   color: #f2f4f7;
   min-width: 600px;
-  height: 100px;
+  height: 90px;
   margin-right: 30px;
   box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
+  transition: transform .2s;
+}
+
+.code-text:hover {
+  transform: scale(1.03);
 }
 
 .about-line {
@@ -219,12 +236,17 @@ body {
 }
 
 .about-img {
+  transition: transform .2s;
   width: 150px;
   height: 150px;
   border-radius: 10px;
   margin-right: 20px;
   margin-left: 30px;
   box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
+}
+
+.about-img:hover {
+  transform: scale(1.1);
 }
 
 .thumbnail-container {
@@ -272,8 +294,8 @@ body {
 }
 
 .cv-image-large {
-  height: 850px;
-  width: 650px;
+  height: 950px;
+  width: 750px;
   box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
   margin-right: 20px;
 }
@@ -289,6 +311,18 @@ body {
   font-weight: 300;
   margin: 0;
   color: white;
+}
+
+.expo-img {
+  width: 300px;
+  border-radius: 5px;
+  transition: transform .2s;
+}
+
+.expo-img:hover {
+  width: 300px;
+  border-radius: 5px;
+  transform: scale(1.03);
 }
 
 .links {
