--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -119,7 +119,7 @@ body {
 }
 
 .active {
-  color: #c23235;
+  color: #878282;
 }
 
 .disabled {
@@ -220,6 +220,7 @@ body {
   font-weight: 300;
   color: #f2f4f7;
   min-width: 600px;
+  max-width: 1000px;
   height: 90px;
   margin-right: 30px;
   box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
@@ -313,15 +314,25 @@ body {
   color: white;
 }
 
+.expo-img-container {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
 .expo-img {
-  width: 300px;
+  width: 400px;
   border-radius: 5px;
   transition: transform .2s;
+  box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
+}
+
+.expo-caption {
+  font-size: 12px;
 }
 
 .expo-img:hover {
-  width: 300px;
-  border-radius: 5px;
   transform: scale(1.03);
 }
 
